src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Residence_Address__c</fullName>
        <description>Primary Applicant Residence Address</description>
        <formula>Applicant__r.Residence_Address__c</formula>
        <label>Residence Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone_Type__c</fullName>
        <description>Primary applicant second phone type</description>
        <formula>TEXT( Applicant__r.Second_Phone_Type__c )</formula>
        <label>Second Phone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <description>Primary applicant second phone</description>
        <formula>Applicant__r.Second_Phone__c</formula>
        <label>Second Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Stats of application</description>
        <inlineHelpText>The current status of this application</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User agreed online to terms of application submittal</description>
        <inlineHelpText>The user agreed to the terms of submitting this application.</inlineHelpText>
        <label>Terms Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gross_Income__c</fullName>
        <description>Total Household Gross Income</description>
        <inlineHelpText>All pre-tax income (wages, benefits, and other sources) from every household member.</inlineHelpText>
        <label>X Total Household Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size_Entered__c</fullName>
        <description>Total household size entered on application (not calculated from household rollup)</description>
        <label>Total Household Size Entered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Household_Size__c</fullName>
        <label>Total Household Size</label>
        <summarizedField>Application_Member__c.Application_Household_Auto_Number__c</summarizedField>
        <summaryFilterItems>
            <field>Application_Member__c.Type__c</field>
            <operation>equals</operation>
            <value>Primary Applicant, Household Member</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Member__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Rent__c</fullName>
        <inlineHelpText>Total Monthly Rent</inlineHelpText>
        <label>Total Monthly Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_in_SF_Preference_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work in SF Preference Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipLabel>Applications (Work in SF Preference Member)</relationshipLabel>
        <relationshipName>Applications7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_in_SF_Preference_Proof__c</fullName>
        <label>Work in SF Preference Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Third-Party Proof of SF Homelessness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Reviewed_Flagged_Applications__c</fullName>
        <description>Number of Flagged application records (rules that this application is considered duplicate on) where it is considered</description>
        <label># of Reviewed Flagged Applications</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed - Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Live_Work_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_BMR_Rental_Short_Form_Applications</fullName>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference__c</columns>
        <columns>DTHP_Preference_Manual__c</columns>
        <columns>DTHP_Preference_Member__c</columns>
        <columns>DTHP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Rental_Short_Form</value>
        </filters>
        <label>All BMR Rental Short-Form Applications</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Applications</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Submitted Applications</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Applications1</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Removed</value>
        </filters>
        <filters>
            <field>Listing__c</field>
            <operation>contains</operation>
            <value>280 Brighton</value>
        </filters>
        <label>280 Brighton Removed</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Applications_Multifamily</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Submitted Applications Multifamily</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Applications_electronic</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Application_Submission_Type__c</field>
            <operation>equals</operation>
            <value>Electronic</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>DAHLIA</value>
        </filters>
        <label>All Submitted Applications_electronic</label>
    </listViews>
    <listViews>
        <fullName>Argenta_909</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Lottery_Number__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Primary_Applicant__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Residence_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Listing__c</field>
            <operation>contains</operation>
            <value>Argenta Unit 909</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>Argenta 909</label>
    </listViews>
    <listViews>
        <fullName>Brighton_11_16</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Application_Language__c</columns>
        <columns>General_Lottery__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Listing__c</field>
            <operation>equals</operation>
            <value>280 Brighton Avenue</value>
        </filters>
        <label>280 Brighton 11/30/16</label>
    </listViews>
    <listViews>
        <fullName>Brighton_11_16_paper</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <columns>Application_Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Listing__c</field>
            <operation>equals</operation>
            <value>280 Brighton Avenue</value>
        </filters>
        <filters>
            <field>Application_Submission_Type__c</field>
            <operation>equals</operation>
            <value>Paper</value>
        </filters>
        <label>280 Brighton 11/30/16 paper</label>
    </listViews>
    <listViews>
        <fullName>COP_Confirmed_Applications</fullName>
        <columns>NAME</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Valid,Valid - Added</value>
        </filters>
        <label>COP Confirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_Unconfirmed_Applications</fullName>
        <columns>NAME</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Rental_Short_Form</value>
        </filters>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>COP Unconfirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_Unconfirmed_Applications1</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>COP Unconfirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_confirmed_Applications1</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>COP confirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_confirmed_Applications2</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed,Valid,Valid - Added</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>COP confirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_confirmed_Applications3</fullName>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed,Valid,Valid - Added</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Removed</value>
        </filters>
        <label>COP confirmed Applications</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Rental_Short_Form</fullName>
        <active>true</active>
        <description>Rental Short Form Application</description>
        <label>Rental Short Form</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NoEditWhenInDraftStatus</fullName>
        <active>true</active>
        <description>No Edit When In Draft Status</description>
        <errorConditionFormula>AND(
   $Profile.Name = &quot;MOHCD - Staff&quot; || $Profile.Name = &quot;MOHCD - Leasing Agent&quot; || $Profile.Name = &quot;MOHCD - Leasing Agent Clerk&quot; || $Profile.Name = &quot;MOHCD - Lender&quot; || $Profile.Name = &quot;MOHCD - Property Agent&quot;,
   ISPICKVAL(Status__c, &quot;draft&quot;)
)</errorConditionFormula>
        <errorMessage>You do NOT have the ability to Edit this record when it is in &quot;Draft&quot; status.
Click Cancel to return to View mode.</errorMessage>
    </validationRules>
</CustomObject>